# tolokaforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .roomodes  AGENTS.md  CITATION.bib  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  pyproject.toml
.cursor/rules/: cursor.mdc
.devcontainer/: Dockerfile  devcontainer.json  post_attach_container.sh  post_setup_container.sh  pre_init_container.sh
.github/workflows/: ci.yml  claude-review.yml  publish-adapter-terminal-bench.yml  publish-tolokaforge.yml
.roo/: mcp.json
docker/: agent.Dockerfile  db_service.Dockerfile  executor.Dockerfile  json_db.Dockerfile  mock_web.Dockerfile  orchestrator.Dockerfile  rag.Dockerfile  runner.Dockerfile
docs/: ADAPTERS.md  ADAPTER_ARCHITECTURE.md  ADAPTER_INTERFACE.md  API.md  BENCHMARK_TYPES.md  BROWSER_TOOLS.md  CONFIG.md  DB_SERVICE_API.md  FUTURE_DEVELOPMENT.md  GETTING_STARTED.md  GRADING.md  GRADING_VERIFICATION.md  GRPC_PROTOCOL.md  KNOWLEDGE_REASONING.md  LOGGING.md  MCP_INTEGRATION.md  NATIVE_ADAPTER.md  NOVA_INTEGRATION.md  OUTPUT_FORMAT.md  PERFORMANCE.md  PYPI_PUBLISHING.md  PYTHON_PACKAGE.md  REFERENCE.md  RUNNER.md  SECURITY.md  TASKS.md  TASK_DESCRIPTION_SCHEMA.md  TASK_PACKS.md  TOOLS.md  TROUBLESHOOTING.md  TYPESENSE_INTEGRATION.md  custom_checks.md
examples/analyze_results/: README.md  analyze_run.py
examples/browser_task/: README.md  run_config.yaml
examples/custom_grading/: README.md  run_config.yaml
examples/distributed_run/: README.md  run_config.yaml
examples/package_api/: README.md  run_minimal_dataset.py
external_adapters/: README.md
external_adapters/tolokaforge-adapter-terminal-bench/: README.md  pyproject.toml
external_adapters/tolokaforge-adapter-terminal-bench/src/tolokaforge_adapter_terminal_bench/: __init__.py  adapter.py  compose_env.py  task_parser.py
scripts/: README.md  common.sh  with_env.sh  with_profile.sh
scripts/lint/: run_black.sh  run_ruff.sh
scripts/setup/: create_python_venv.sh  init_git_lfs.sh  setup_env.sh
scripts/tests/: smoke.sh
tests/: AGENTS.md  BASELINE.md  README.md  __init__.py  conftest.py
tests/canonical/: README.md  conftest.py  test_custom_checks_canon.py  test_golden_set_canon.py  test_grading_canon.py  test_grading_pipeline_canon.py  test_native_adapter_canon.py  test_shop_orders_02_behavior_canon.py  test_terminal_bench_adapter_canon.py
tests/data/projects/: README.md
tests/integration/: test_browser_tool.py  test_docker_grading.py  test_docker_services.py  test_llm_model_params.py  test_nova_api.py  test_run_queue_postgres.py  test_security.py  test_typesense_lifecycle.py
tests/integration/docker/: __init__.py  conftest.py  test_docker_build_context.py  test_docker_caching.py  test_docker_integration.py  test_docker_stack.py
tests/unit/: test_adapters.py  test_api_helper.py  test_browser_tool.py  test_builtin_tool_wrapper.py  test_calculator_tool.py  test_cli_commands.py  test_cli_status.py  test_config_validator.py  test_diff.py  test_docker_build_context.py  test_dockerfile_paths.py  test_domain_bundle.py  test_domain_state.py  test_failure_attribution.py  test_file_and_bash_tools.py  test_golden_replay.py  test_llm_providers.py  test_logging.py  test_metrics.py  test_mobile_tool.py  test_mock_web_task_roots.py  test_model_client.py  test_mounts.py  test_native_task_bundle.py  test_nova_logic.py  test_orchestrator_logic.py  test_output_writer.py  test_performance.py  test_pricing.py  test_rate_limiter.py  test_resume.py  test_run_queue.py  test_runner_logic.py  test_runner_pipeline.py  test_service_definition.py  test_stuck_detector.py  test_task_packs.py  test_terminal_bench.py  test_tool_builtins.py  test_tool_security.py  (+7 more)
tests/unit/adapters/: __init__.py  test_frozen_mcp_core.py
tests/unit/grading/: __init__.py  (+10 more)
tests/utils/: containers.py  docker_helpers.py  fixtures.py  mock_clients.py  networks.py  project_fixtures.py  validators.py
tolokaforge/: __init__.py
tolokaforge/adapters/: __init__.py  base.py  bundle_writer.py  frozen_mcp_core.py  native.py
tolokaforge/agent/: __init__.py  __main__.py  agent.proto  agent_pb2.py  agent_pb2_grpc.py  service.py
tolokaforge/cli/: adapter_commands.py  config_commands.py  docker_commands.py  main.py
tolokaforge/core/: __init__.py  api_helper.py  config_validator.py  docker_adapter.py  docker_runtime.py  env_state.py  failure_attribution.py  hash.py  logging.py  metrics.py  model_client.py  models.py  mounts.py  orchestrator.py  output_writer.py  pricing.py  rate_limiter.py  resume.py  run_queue.py  runner.py  stuck.py  tools_interface.py
tolokaforge/docker/: __init__.py  builder.py  config.py  container.py  health.py  image.py  logging.py  mount.py  network.py  policy.py  ports.py  registry.py  stack.py  wait_for_services.py
tolokaforge/env/: __init__.py
tolokaforge/executor/: __init__.py  __main__.py  executor.proto  executor_pb2.py  executor_pb2_grpc.py  service.py
tolokaforge/runner/: __init__.py  __main__.py  db_client.py  db_proxy.py  grading.py  models.py  rag_client.py  runner.proto  runner_pb2.py  runner_pb2_grpc.py  service.py  tool_factory.py
tolokaforge/secrets/: __init__.py  config.py  manager.py  providers.py
tolokaforge/tools/: __init__.py  registry.py  user_tools.py
tools/: AGENTS.md
tools/demo-recorder/: README.md  pyproject.toml
tools/demo-recorder/src/demo_recorder/: __init__.py  batch.py  cli.py  recorder.py
tools/demo-recorder/tests/: test_batch.py  test_recorder.py
tools/dev-mcp/: README.md  pyproject.toml
tools/dev-mcp/src/dev_mcp/: server.py  subprocess_utils.py
tools/dev-mcp/tests/: test_server.py
tools/eval-orchestrator/: README.md  pyproject.toml
tools/eval-orchestrator/src/eval_orchestrator/: __init__.py  __main__.py  cli.py  merger.py  splitter.py
tools/eval-orchestrator/tests/: test_merger.py  test_splitter.py
tools/pricing-updater/: README.md  pyproject.toml
tools/pricing-updater/src/pricing_updater/: __init__.py  __main__.py  cli.py  fetcher.py
tools/pricing-updater/tests/: test_fetcher.py
(+148 files in other folders)
