[project]
name = "demo-recorder"
version = "0.1.0"
description = "Generate split-screen mobile demo videos from tolokaforge trajectories"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pillow>=12.1.0",
    "playwright>=1.40.0",
]

[project.scripts]
demo-recorder = "demo_recorder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_recorder"]
